--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile files('libs/applovin-android-sdk-6.0.1/applovin-sdk-6.0.1.jar')
 }
