--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ralemproductions.trolltext" >
+    package="com.ralem.ralemproductions.trolltext" >
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -23,7 +23,7 @@
         <activity android:name="com.applovin.adview.AppLovinInterstitialActivity" />
         <activity android:name="com.applovin.adview.AppLovinConfirmationActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.ralem.ralemproductions.trolltext.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,21 +32,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Texting"
+            android:name="com.ralem.ralemproductions.trolltext.Texting"
             android:label="@string/title_activity_texting"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="com.ralem.ralemproductions.trolltext.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.ralemproductions.trolltext.MainActivity" />
+                android:value="com.ralem.ralemproductions.trolltext.MainActivity" />
         </activity>
         <activity
-            android:name=".chooseContact"
+            android:name="com.ralem.ralemproductions.trolltext.chooseContact"
             android:label="@string/title_activity_choose_contact" >
         </activity>
         <activity
-            android:name=".dial"
+            android:name="com.ralem.ralemproductions.trolltext.dial"
             android:label="@string/title_activity_choose_contact" >
         </activity>
+
     </application>
 
 </manifest>
